<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/preload"
    tools:context=".ScientificCalculator"
    tools:ignore="autofill, LabelFor, ButtonStyle, RtlCompat, HardCodedText, NestedWeights, ContentDescription">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_temp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/krasiva"
            app:titleTextColor="#fff" />
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/input3"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:ems="10"
            android:inputType="none"
            android:maxLength="20"
            android:textAlignment="textEnd"
            android:textSize="22sp"
            android:textColor="#fff"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <TextView
            android:id="@+id/result3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:maxLength="16"
            android:textAlignment="textEnd"
            android:textSize="25sp"
            android:textColor="#ffffff"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="24sp"
            android:text="7"
            android:textColor="#ffffff"
            android:background="@color/preload"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/btn7"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="24sp"
            android:text="8"
            android:textColor="#ffffff"
            android:background="@color/preload"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/btn8"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="24sp"
            android:text="9"
            android:textColor="#ffffff"
            android:background="@color/preload"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/btn9"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/butnum"
            android:id="@+id/btndel"
            android:text="@string/backspace"
            android:textColor="#ffffff"
            android:textSize="30sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="24sp"
            android:text="4"
            android:textColor="#ffffff"
            android:background="@color/preload"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/btn4"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="24sp"
            android:text="5"
            android:textColor="#ffffff"
            android:background="@color/preload"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/btn5"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="24sp"
            android:text="6"
            android:textColor="#ffffff"
            android:background="@color/preload"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/btn6"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="sin"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/butnum"
            android:id="@+id/btnsin"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="24sp"
            android:text="1"
            android:textColor="#ffffff"
            android:background="@color/preload"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/btn1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="24sp"
            android:text="2"
            android:textColor="#ffffff"
            android:background="@color/preload"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/btn2"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="24sp"
            android:text="3"
            android:textColor="#ffffff"
            android:background="@color/preload"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/btn3"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="cos"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/butnum"
            android:id="@+id/btncos"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="24sp"
            android:text="0"
            android:textColor="#ffffff"
            android:background="@color/preload"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/btn0"/>

        <Button
            style="@style/popupTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/btndot"
            android:textSize="24sp"
            android:text="."
            android:textColor="#ffffff"
            android:background="@color/preload"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sqroot"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/butnum"
            android:id="@+id/btnsqrroot"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="tan"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/butnum"
            android:id="@+id/btntan"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/butnum"
            android:text="exp"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:id="@+id/btnexp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="log"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/butnum"
            android:id="@+id/btnlog"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/square"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/butnum"
            android:id="@+id/btnsqr"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cube"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/butnum"
            android:id="@+id/btncube"/>

    </LinearLayout>
    </LinearLayout>
</LinearLayout>